fixes: dragging off screen, reading wrong file types, gain easier to drag, hid highcharts watermark

--- a/mvc.css
+++ b/mvc.css
@@ -53,13 +53,14 @@
 
 .statemachine .gainInput {
     position:relative;
-    top:-90%;
-    left:20%;
+    top:-80%;
+    left:30%;
     text-align:center;
-    height:80%;
-    width:60%;
+    height:60%;
+    width:40%;
     border:0px;
     background:none;
+    padding: 0px;
 }
 
 .statemachine .componentValue {
